Improved Build Process

--- a/sources/bash/Makefile
+++ b/sources/bash/Makefile
@@ -22,11 +22,14 @@ $(PROJECT_PROGRAM): $(PROJECT_AUX_SCRIPT) Makefile config.mk
 	bin/link /bin/bash $< > $@
 	chmod +x $@
 
-build-dependency-list:
-	@realpath $(PROJECT_LIBRARY_SCRIPTS) $(PROJECT_AUX_SCRIPTS) $(PROJECT_MAIN_SCRIPT) Makefile config.mk;
+export-program-dependency-files:
+	@echo $(PROJECT_LIBRARY_SCRIPTS) $(PROJECT_AUX_SCRIPTS) $(PROJECT_MAIN_SCRIPT) Makefile config.mk;
 
-build-program-file:
-	@echo $(PROJECT_PROGRAM)
+export-program-name:
+	@echo $(PROJECT_PROGRAM_NAME)
+
+export-program-directory:
+	@echo $(BUILD_PROGRAM_DIR)
 
 clean:
 	@rm -vrf $(BUILD_OUTPUT_DIRECTORIES) $(PROJECT_PROGRAM)
