--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,9 +4,26 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
+			"label": "Uninstall Project",
+			"type": "shell",
+			"command": "sudo make uninstall",
+			"problemMatcher": []
+		},
+		{
+			"label": "Install Project",
+			"type": "shell",
+			"dependsOn": "Build Project",
+			"command": "sudo make install",
+			"group": {
+				"kind": "build",
+				"isDefault": true
+			},
+			"problemMatcher": []
+		},
+		{
 			"label": "Build Project",
 			"type": "shell",
-			"command": "make && sudo make install",
+			"command": "make",
 			"group": {
 				"kind": "build",
 				"isDefault": true
